Understanding LLMs: Understanding Model Versions.

--- a/Understanding-LLMs.ipynb
+++ b/Understanding-LLMs.ipynb
@@ -5,7 +5,7 @@
    "id": "c430f0ad",
    "metadata": {},
    "source": [
-    "# How LLMs Generate Text: Predicting the Next Token\n",
+    "# 1- How LLMs Generate Text: Predicting the Next Token\n",
     "\n",
     "LLMs, like the ones you will use in this course, generate text by predicting one piece at a time. These pieces are called `tokens`. The model looks at the text you have already given (the context) and tries to guess what comes next, one token at a time. This process is repeated until the model finishes its response.\n",
     "\n",
@@ -73,6 +73,41 @@
     "For example, when you type a question or instruction, the chat interface may add a hidden prompt like \"You are a helpful assistant.\" This tells the LLM to answer your question, follow your instructions, and continue your text.\n",
     "\n",
     "The chat interface also keeps track of the conversation history so the LLM can give more relevant and coherent responses. This setup allows you to interact with LLMs naturally, as if chatting with an assistant."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f88ebba9",
+   "metadata": {},
+   "source": [
+    "# 2- Understanding Model Versions\n",
+    "\n",
+    "In this lesson, we will focus on understanding `model versions`. This knowledge will help you make better choices when working with different models and crafting your prompts.\n",
+    "\n",
+    "\n",
+    "### Before we Start\n",
+    "You probably already noticed that LLM's answer can differ each time you send a prompt.\n",
+    "\n",
+    "This is because LLMs are probabilistic—they generate responses by predicting the most likely next word or token, but there's always some randomness involved. This means you can't be sure the model will always return exactly what you want. Sometimes, the answer can be very different with each run of a request, even if you use the same prompt.\n",
+    "\n",
+    "This is important to remember during the practices: since we can't know exactly what the LLM will return, you may get an unexpected answer. If that happens, you can try rerunning the prompt in another chat to see if you get a better result, or you can refine your prompt to guide the model more clearly.\n",
+    "\n",
+    "\n",
+    "## What Are Model Versions?\n",
+    "LLMs are updated and improved over time. Each update is called a `model version`. New versions are released for several reasons:\n",
+    "\n",
+    "- To include more recent information in the training data.\n",
+    "- To fix mistakes or improve how the model understands prompts.\n",
+    "- To make the model faster or more accurate.\n",
+    "\n",
+    "For example, you might see models named `Claude Sonnet 3.7` and `Claude Sonnet 4`. The higher number usually means a newer version, often with more up-to-date information and better performance.\n",
+    "\n",
+    "\n",
+    "### Pay Attention\n",
+    "\n",
+    "**Note**: Modern language models are typically designed to be cautious when addressing questions outside their knowledge base. If asked about something they have no information on, they often respond honestly with \"I don't know.\" However, it's important to remember that a model's primary function is to generate plausible answers, not necessarily correct ones. As a result, they may sometimes produce inaccurate or misleading information. This is called \"LLM hallucination\".\n",
+    "\n",
+    "While LLMs can be very helpful assistants, they should not be relied upon as definitive sources of truth."
    ]
   },
   {
