Understanding Reasoning Models: Guiding LLMs to Think Step by Step using Chain of Thought Prompting.

--- a/Understanding-LLMs.ipynb
+++ b/Understanding-LLMs.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "For example, let's look at the phrase:\n",
     "\n",
-    "```\n",
+    "```bash\n",
     "A bottle of water\n",
     "```\n",
     "\n",
@@ -108,6 +108,119 @@
     "**Note**: Modern language models are typically designed to be cautious when addressing questions outside their knowledge base. If asked about something they have no information on, they often respond honestly with \"I don't know.\" However, it's important to remember that a model's primary function is to generate plausible answers, not necessarily correct ones. As a result, they may sometimes produce inaccurate or misleading information. This is called \"LLM hallucination\".\n",
     "\n",
     "While LLMs can be very helpful assistants, they should not be relied upon as definitive sources of truth."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c98e23d0",
+   "metadata": {},
+   "source": [
+    "# 3- Understanding Reasoning Models: Guiding LLMs to Think Step by Step\n",
+    "\n",
+    "This lesson is about how you can get even better answers from LLMs — especially for complex or multi-step problems — by guiding them to \"think\" before answering.\n",
+    "\n",
+    "When you ask a model a simple question, it often gives you a direct answer. However, for more complicated tasks, such as solving a math problem or analyzing a scenario, the model can make mistakes if it tries to answer too quickly. This is where `reasoning techniques` come in. Encouraging the model to break down its thought process can help it arrive at more accurate and logical answers.\n",
+    "\n",
+    "\n",
+    "## Chain of Thought (CoT): The Step-by-Step Approach\n",
+    "The `Chain of Thought (CoT)` technique is a way to prompt LLMs to solve problems step by step, just like you might do on paper. Instead of asking for a final answer right away, you guide the model to show its reasoning process.\n",
+    "\n",
+    "Let's see how this works, starting with a simple math problem.\n",
+    "\n",
+    "Suppose you ask:\n",
+    "\n",
+    "```bash\n",
+    "Q: What is 197 * 971?\n",
+    "```\n",
+    "\n",
+    "If you ask this, the model will try to predict the next token. It can't actually do the math; it just predicts something plausible. Sometimes, it gets it right, but often, it makes a mistake, especially with large numbers or multi-step problems.\n",
+    "\n",
+    "To help the model, you can add a phrase like `Think step by step` to your prompt. This tells the model to break down the problem:\n",
+    "\n",
+    "```bash\n",
+    "Q: What is 197 * 971? Think step by step.\n",
+    "```\n",
+    "But you can be even more helpful by showing the model exactly how to break down the steps. Let's build this up together.\n",
+    "\n",
+    "First, you can show the model how to multiply using place value:\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "Step 1: Multiply the unit digit of 197 (which is 7) by 971.\n",
+    "Step 2: Multiply the tens digit of 197 (which is 9) by 971, and add a zero at the end.\n",
+    "Step 3: Multiply the hundreds digit of 197 (which is 1) by 971, and add two zeroes at the end.\n",
+    "Step 4: Add all the results together.\n",
+    "```\n",
+    "\n",
+    "Chain of Thought (CoT): Full Example\n",
+    "Now, let's put this into a full prompt, step by step:\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "Q: What's 212 * 385?\n",
+    "\n",
+    "A: Step 1: Multiply 2 (units place of 212) by 385\n",
+    "       2 * 385 = 770\n",
+    "Step 2: Multiply 1 (tens place of 212) by 385 and add a zero at the end\n",
+    "       1 * 385 = 385 => 3850\n",
+    "Step 3: Multiply 2 (hundreds place of 212) by 385 and add two zeroes at the end\n",
+    "       2 * 385 = 770 => 77000\n",
+    "Step 4: Add all the results from steps 1, 2, and 3\n",
+    "       770 + 3850 + 77000 = 81620\n",
+    "\n",
+    "Therefore, 212 * 385 = 81620\n",
+    "\n",
+    "Q: What's 197 * 971?\n",
+    "```\n",
+    "\n",
+    "In this prompt, we provide the model with a solution example for a different problem and then ask for a solution to an actual problem. This way, we show the model how to \"think\" properly.\n",
+    "\n",
+    "By guiding the model through each step, you help it avoid mistakes and clarify its reasoning. This is the core idea behind Chain of Thought prompting.\n",
+    "\n",
+    "You can use this approach for many problems, not just math. For example, you can ask the model to explain its reasoning in logic puzzles, story analysis, or code debugging.\n",
+    "\n",
+    "\n",
+    "## How Reasoning Models Use Chain of Thought\n",
+    "\n",
+    "Some advanced LLMs are trained to use Chain of Thought reasoning automatically, especially when they see specific cues in your prompt. These are called `reasoning models`. They are designed to handle multi-step problems by breaking them down internally, even if you don't explicitly ask them to.\n",
+    "\n",
+    "For example, if you prompt a reasoning model with:\n",
+    "\n",
+    "```bash\n",
+    "Q: What's 202*588?\n",
+    "```\n",
+    "A reasoning model might automatically start breaking down the steps, similar to the example above, and show its work before giving the final answer.\n",
+    "\n",
+    "However, not all models do this by default. For regular models, you often need to guide them by providing an example or by saying, `Think step by step`. Reasoning models are more likely to follow this process independently, but you can still help them by being clear in your prompt.\n",
+    "\n",
+    "\n",
+    "## When to Use Reasoning Models vs. Regular Models\n",
+    "Let's examine the pros and cons of using reasoning models and when to use each type.\n",
+    "\n",
+    "| Category | Reasoning Models (with CoT)                                                                                                                | Regular Models                                                                            |\n",
+    "| -------- | ------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------- |\n",
+    "| **Pros** | • Better at multi-step problems (math, logic, analysis)<br>• More transparent reasoning<br>• Less likely to make mistakes on complex tasks | • Faster responses<br>• Good for simple, factual questions<br>• Uses less computing power |\n",
+    "| **Cons** | • Slower, longer answers<br>• May over-explain simple questions<br>• Usually more expensive to run                                         | • Can make mistakes on complex tasks<br>• Less transparent reasoning                      |\n",
+    "\n",
+    "\n",
+    "\n",
+    "`When to use reasoning models:`\n",
+    "\n",
+    "- Solving math problems with multiple steps\n",
+    "- Logic puzzles or riddles\n",
+    "- Explaining something\n",
+    "- Brainstorming sessions\n",
+    "- Analyzing stories or scenarios\n",
+    "- Advanced coding tasks\n",
+    "\n",
+    "\n",
+    "`When to use regular models:`\n",
+    "\n",
+    "- Quick factual lookups (e.g., \"What is the capital of France?\")\n",
+    "- Simple, direct questions\n",
+    "- When you want to create something, e.g., generate a story or a code snippet\n",
+    "- When you want a short answer\n",
+    "- When you want to save money\n"
    ]
   },
   {
