Understanding Context Windows: Managing Input and Output Sizes, with Strategies to Optimize Prompts.

--- a/Understanding-LLMs.ipynb
+++ b/Understanding-LLMs.ipynb
@@ -225,6 +225,113 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa59b2c8",
+   "metadata": {},
+   "source": [
+    "# 4- Understanding Context Windows: Managing Input and Output Sizes\n",
+    "\n",
+    "A `context window` is the maximum amount of information (measured in tokens) a model can consider simultaneously. This includes your input (the prompt) and the model's output (the response). If you try to give the model more information than fits in its `context window`, some of it will be ignored or cut off.\n",
+    "\n",
+    "Understanding `context windows` is important because it helps you design prompts that fit within these limits, ensuring the model can \"see\" everything it needs to give you a good answer.\n",
+    "\n",
+    "\n",
+    "## Historical Evolution of Context Limits\n",
+    "`Context windows` have changed a lot as LLMs have improved. Early models could only handle short prompts and responses, while newer models can work with much more information at once.\n",
+    "\n",
+    "Here's a simple table showing how `context window` sizes have grown over time:\n",
+    "\n",
+    "| Model Name  | Release Year | Context Window Size (tokens) |\n",
+    "| ----------- | -----------: | ---------------------------: |\n",
+    "| GPT-2       |         2019 |                        1,024 |\n",
+    "| GPT-3       |         2020 |                        2,048 |\n",
+    "| GPT-3.5     |         2022 |                        4,096 |\n",
+    "| GPT-4 (8k)  |         2023 |                        8,192 |\n",
+    "| GPT-4 (32k) |         2023 |                       32,768 |\n",
+    "| Claude 2    |         2023 |                      100,000 |\n",
+    "\n",
+    "\n",
+    "As you can see, newer models can handle much larger `context windows`. This means you can give them longer prompts or get longer responses, but there is always a limit.\n",
+    "\n",
+    "\n",
+    "## How Context Windows Affect Input and Output\n",
+    "Let's look at how the `context window` shapes what you can do with an LLM.\n",
+    "\n",
+    "The `context window` is shared between your input and the model's output. For example, if a model has a 4,096-token `context window` and your prompt is 2,000 tokens, it can only generate up to 2,096 tokens in its response. If your prompt is too long, the model's response will be shorter or cut off part of your input.\n",
+    "\n",
+    "\n",
+    "## Strategies: Make Inputs Shorter and More Relevant\n",
+    "When you hit the `context window` limit, you have several strategies to get the desired results. Let's go through them step by step, with examples.\n",
+    "\n",
+    "Instead of pasting everything, focus on the most important parts.\n",
+    "\n",
+    "Suppose you have a long email thread but only need a summary of the last conversation.\n",
+    "\n",
+    "Prompt:\n",
+    "\n",
+    "```bash\n",
+    "Summarize the last two emails in this thread:\n",
+    "[Paste only the previous two emails]\n",
+    "```\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "Including only the relevant emails saves space and ensures the model focuses on what matters.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Strategies: Request Shorter or Partial Outputs\n",
+    "If you can't fit everything, ask the model for a recommendation or a plan, not the full result.\n",
+    "\n",
+    "Suppose you want to improve a lengthy document, but it's too big for the `context window`.\n",
+    "\n",
+    "Prompt:\n",
+    "\n",
+    "```bash\n",
+    "Read the introduction of this document and suggest three ways to improve it:\n",
+    "[Paste only the introduction]\n",
+    "```\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "Instead of asking for a complete rewrite, you ask for suggestions. This fits within the `context window` and still gives you helpful feedback.\n",
+    "\n",
+    "\n",
+    "## Strategies: Break into Parts\n",
+    "Break the task into smaller steps. Suppose you have a book chapter to summarize.\n",
+    "\n",
+    "Prompt 1:\n",
+    "\n",
+    "```bash\n",
+    "Summarize pages 1-3 of this chapter:\n",
+    "[Paste text from pages 1-3]\n",
+    "```\n",
+    "\n",
+    "Prompt 2:\n",
+    "\n",
+    "```bash\n",
+    "Summarize pages 4-6 of this chapter:\n",
+    "[Paste text from pages 4-6]\n",
+    "```\n",
+    "\n",
+    "Prompt 3:\n",
+    "\n",
+    "```bash\n",
+    "Combine these summaries into a single summary:\n",
+    "[Paste the two summaries]\n",
+    "```\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "By summarizing in smaller chunks and then combining the results, you work around the `context window` limit.\n",
+    "\n",
+    "Of course, there are other strategies, including `advanced iterative approaches`. We will explore these approaches in the following courses of this path.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "252bb71d",
    "metadata": {},
    "source": []
