Editing Messages to Refine LLM Responses.

--- a/Understanding-LLMs.ipynb
+++ b/Understanding-LLMs.ipynb
@@ -332,9 +332,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "252bb71d",
+   "id": "e1b505eb",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 5- Editing Messages to Refine LLM Responses\n",
+    "\n",
+    "Now, let's focus on a practical technique: editing previous messages to refine the model's context and improve results. This skill is handy when the model's response isn't quite what you wanted or when you want to guide the conversation in a more specific direction. By the end of this lesson, you'll know how to recognize when an edit is needed and how to make changes that help the LLM give better answers.\n",
+    "\n",
+    "\n",
+    "## How LLMs Use Conversation History\n",
+    "\n",
+    "As a quick reminder, LLMs do not just look at your latest message — they process the entire conversation history every time you submit a new message. This means that any changes you make to earlier messages or responses will affect how the model interprets the conversation and what it generates next.\n",
+    "\n",
+    "For example, if you ask a question and then edit your question or the model's answer, the LLM will use the updated version as its context for future replies. This is a powerful way to steer the conversation and get more relevant or better-formatted answers.\n",
+    "\n",
+    "\n",
+    "## Defining the Desired Answer Format\n",
+    "\n",
+    "Let's consider an example. Imagine you are a teacher wanting to brainstorm a list of teaching strategies. Consider the following prompt:\n",
+    "\n",
+    "```bash\n",
+    "Provide me with a list of strategies for engaging middle school students. Include overview.\n",
+    "```\n",
+    "\n",
+    "By specifying that you want a \"list\" and an \"overview,\" you set clear expectations for the LLM's response format. However, the prompt is still somewhat general, so the LLM may include a variety of strategy types and additional details.\n",
+    "\n",
+    "Notice that the output includes multiple types of strategies and implementation details, which may go beyond what you wanted if you were only interested in \"active learning strategies\" and a simpler format. This is not an error by the LLM, but rather a result of the prompt's generality.\n",
+    "\n",
+    "One approach is to `introduce a set of specific instructions`. You can try to define all the details about the output format in your prompt. It could be very time-consuming. Let's take a look at a more efficient approach.\n",
+    "\n",
+    "\n",
+    "### Modifying LLM Responses: \n",
+    "\n",
+    "A modern chat-based LLM works as follows: it takes the whole previous dialogue and predicts the following reply. This means that even slight modifications to previous responses can significantly impact subsequent outputs. If an LLM's response includes unnecessary details, restructuring the answer before continuing the dialogue ensures that future responses adhere more closely to the desired format. However, one potential limitation is that changes made to the response do not \"erase\" the model's original reasoning—they only shift its interpretation for future responses. If inconsistencies persist, resetting the conversation might be necessary.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Approach\n",
+    "When the initial response from an LLM doesn't fully meet your expectations, you can manually adjust the response to fit the desired format better. This process improves the clarity of the response and helps the LLM understand the task more effectively. When you ask the next question, the LLM will treat the modified answer as its initial answer and will likely answer using the same format.\n",
+    "\n",
+    "By removing initial context, implementation details, and other strategy types, we implicitly communicate the desired structure to the LLM.\n",
+    "\n",
+    "\n",
+    "## As a Reminder\n",
+    "LLMs are probabilistic systems, which means their responses can vary each time you interact with them, even with the same prompt and context. Because of this, you might encounter unexpected results during practice, especially when using techniques like editing previous messages. The efficiency of such approaches comes with a cost of reliability.\n",
+    "\n",
+    "If this happens, you can always rerun your prompt in a new chat or further refine your prompt to guide the model more clearly. Experimentation and iteration are a regular part of working with LLMs."
+   ]
   }
  ],
  "metadata": {
